--- a/erro.html
+++ b/erro.html
@@ -28,7 +28,7 @@
                 </div>
                 <nav>
                     <ul>
-                        <li><a href="index.html">Voltar para Home</a></li>
+                        <li style="width: 325px;"><a href="index.html">Voltar para Home</a></li>
                     </ul>
                 </nav>
             </header>
