Versão final para o Amazon S3 Bucket

--- a/cv/002.html
+++ b/cv/002.html
@@ -367,7 +367,7 @@
 							<figure>
 								<img src="images/profile_img2.png" alt="Laerte">
 							</figure>
-							<h1>Laerte</h1>
+							<h1>Laerte Porto Junior</h1>
 							<p>Formado em Analise de Sistemas e Pós Graduado na área da Segurança da Informação pela Universo e com experiência de + 10 anos na área da tecnologia, atuando como sysadmin onpremisse, passo por uma transição de carreira onde busco conhecer e aprender a implementar estratégias de migração de aplicações para a Cloud como Devops, visando a redução de custos e aumento de desempenho para isso almejo uma oportunidade para atuar na área de TI, com foco em Cloud. </p>
 						</div>
 					</div>
@@ -385,8 +385,10 @@
 					-->
 
 					<ul class="fh5co-social">
-						<li><a href="mailto:@"><i class="icon-envelope"></i></a></li>
-						<li><a href="#" target="_blank"><i class="icon-linkedin"></i></a></li>
+						<li><a href="mailto:laertep@gmail.com"><i class="icon-envelope"></i></a></li>
+						<li><a href="https://www.linkedin.com/in/laerteportojr/" target="_blank"><i class="icon-linkedin"></i></a></li>
+						<li><a href="https://github.com/" target="_blank"><i class="icon-github"></i></a></li>
+						<li><a href="#" target="_blank"><i class="icon-file-pdf-o"></i></a></li>
 						<!--
 						<li><a href="#"><i class="icon-twitter"></i></a></li>
 						<li><a href="#"><i class="icon-instagram"></i></a></li>
@@ -534,7 +536,7 @@
 				<div class="col-md-6 col-md-offset-3 text-center">
 					<small>
 						&copy; 2023 Currículo Online. Todos os direitos reservados. <span class="fh5co-author">
-						Projetado por <a href="#" target="_blank">Grupo 8</a></span>
+						Projetado por <a href="https://www.updevops.com.br">UP DevOps</a></span>
 					</small>
 				</div>
 			</div>
