--- a/cv/003.html
+++ b/cv/003.html
@@ -387,6 +387,8 @@
 					<ul class="fh5co-social">
 						<li><a href="mailto:micaelschutz04@gmail.com"><i class="icon-envelope"></i></a></li>
 						<li><a href="https://www.linkedin.com/in/micaelschutz/" target="_blank"><i class="icon-linkedin"></i></a></li>
+						<li><a href="https://github.com/" target="_blank"><i class="icon-github"></i></a></li>
+						<li><a href="#" target="_blank"><i class="icon-file-pdf-o"></i></a></li>
 						<!--
 						<li><a href="#"><i class="icon-twitter"></i></a></li>
 						<li><a href="#"><i class="icon-instagram"></i></a></li>
@@ -502,7 +504,7 @@
 				<div class="col-md-6 col-md-offset-3 text-center">
 					<small>
 						&copy; 2023 Currículo Online. Todos os direitos reservados. <span class="fh5co-author">
-						Projetado por <a href="#" target="_blank">Grupo 8</a></span>
+						Projetado por <a href="https://www.updevops.com.br">UP DevOps</a></span>
 					</small>
 				</div>
 			</div>
