--- a/cv/004.html
+++ b/cv/004.html
@@ -388,6 +388,8 @@
 					<ul class="fh5co-social">
 						<li><a href="mailto:renato.silvas@gmail.com"><i class="icon-envelope"></i></a></li>
 						<li><a href="linkedin.com/in/renato-soares-da-silva-7b528266" target="_blank"><i class="icon-linkedin"></i></a></li>
+						<li><a href="https://github.com/" target="_blank"><i class="icon-github"></i></a></li>
+						<li><a href="CV-Renato.Silva.pdf" target="_blank"><i class="icon-file-pdf-o"></i></a></li>
 						<!--
 						<li><a href="#"><i class="icon-twitter"></i></a></li>
 						<li><a href="#"><i class="icon-instagram"></i></a></li>
@@ -530,7 +532,7 @@
 				<div class="col-md-6 col-md-offset-3 text-center">
 					<small>
 						&copy; 2023 Currículo Online. Todos os direitos reservados. <span class="fh5co-author">
-						Projetado por <a href="#" target="_blank">Grupo 8</a></span>
+						Projetado por <a href="https://www.updevops.com.br">UP DevOps</a></span>
 					</small>
 				</div>
 			</div>
