--- a/erro.html
+++ b/erro.html
@@ -23,7 +23,7 @@
             <header id="header">
                 <div class="content">
                     <div class="inner">
-                        <h2>Parece que você se perdeu</h2>
+                        <h2>Parece que você se perdeu.</h2>
                     </div>
                 </div>
                 <nav>
@@ -35,7 +35,7 @@
 
             <!-- Footer -->
                 <footer id="footer">
-                    <p class="copyright">&copy; 2023 Currículo Online | Design: <a href="https://grupo8.com.br">Grupo 8</a></p>
+                    <p class="copyright">&copy; 2023 Currículo Online | Design: <a href="https://www.updevops.com.br">UP DevOps</a></p>
                 </footer>
 
 			</div>
