--- a/cv/001.html
+++ b/cv/001.html
@@ -387,6 +387,8 @@
 						<li><a href="mailto:erivandosena@gmail.com"><i class="icon-envelope"></i></a></li>
 						<li><a href="https://scholar.google.com.br/citations?hl=pt-BR&user=rk-pamMAAAAJ" target="_blank"><i class="icon-google"></i></a></li>
 						<li><a href="https://www.linkedin.com/in/erivandosena/" target="_blank"><i class="icon-linkedin"></i></a></li>
+						<li><a href="https://github.com/erivandosena" target="_blank"><i class="icon-github"></i></a></li>
+						<li><a href="CV-Erivando.Ramos.pdf" target="_blank"><i class="icon-file-pdf-o"></i></a></li>
 						<!--
 						<li><a href="#"><i class="icon-twitter"></i></a></li>
 						<li><a href="#"><i class="icon-instagram"></i></a></li>
@@ -625,7 +627,7 @@
 				<div class="col-md-6 col-md-offset-3 text-center">
 					<small>
 						&copy; 2023 Currículo Online. Todos os direitos reservados. <span class="fh5co-author">
-						Projetado por <a href="#" target="_blank">Grupo 8</a></span>
+						Projetado por <a href="https://www.updevops.com.br" target="_blank">UP DevOps</a></span>
 					</small>
 				</div>
 			</div>
