--- a/cv/001.html
+++ b/cv/001.html
@@ -339,14 +339,14 @@
 	<!-- Header -->
 		<header id="header">
 			<div class="logo">
-				<a href="../index.html#about">
+				<a href="../index.html#about" title="Surpreenda-se com nosso projeto">
 					<span class="icon"><i class="fas fa-gem"></i></span>
 				</a>
 			</div>
 			<nav>
 				<ul>
-					<li><a href="../index.html">Home</a></li>
-					<li><a href="../index.html#work">Currículos</a></li>
+					<li><a href="../index.html" title="Voltar para home">Home</a></li>
+					<li><a href="../index.html#work" title="Continuar visualizando currículos">Currículos</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -384,11 +384,11 @@
 					</div> -->
 
 					<ul class="fh5co-social">
-						<li><a href="mailto:erivandosena@gmail.com"><i class="icon-envelope"></i></a></li>
-						<li><a href="https://scholar.google.com.br/citations?hl=pt-BR&user=rk-pamMAAAAJ" target="_blank"><i class="icon-google"></i></a></li>
-						<li><a href="https://www.linkedin.com/in/erivandosena/" target="_blank"><i class="icon-linkedin"></i></a></li>
-						<li><a href="https://github.com/erivandosena" target="_blank"><i class="icon-github"></i></a></li>
-						<li><a href="CV-Erivando.Ramos.pdf" target="_blank"><i class="icon-file-pdf-o"></i></a></li>
+						<li><a href="mailto:erivandosena@gmail.com" title="Entrar em contato"><i class="icon-envelope"></i></a></li>
+						<li><a href="https://scholar.google.com.br/citations?hl=pt-BR&user=rk-pamMAAAAJ" target="_blank" title="Produções científicas"><i class="icon-google"></i></a></li>
+						<li><a href="https://www.linkedin.com/in/erivandosena/" target="_blank" title="Perfil no LinkedIn"><i class="icon-linkedin"></i></a></li>
+						<li><a href="https://github.com/erivandosena" target="_blank" title="Contribuições no Github"><i class="icon-github"></i></a></li>
+						<li><a href="CV-Erivando.Ramos.pdf" target="_blank" title="Currículo versão PDF"><i class="icon-file-pdf-o"></i></a></li>
 						<!--
 						<li><a href="#"><i class="icon-twitter"></i></a></li>
 						<li><a href="#"><i class="icon-instagram"></i></a></li>
