--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<a href="#about">
+							<a href="#about" title="Surpreenda-se com nosso projeto">
 								<span class="icon fa-gem"></span>
 							</a>
 						</div>
@@ -223,9 +223,9 @@
 						<nav>
 							<ul>
 								<!-- <li><a href="#intro">Home</a></li> -->
-								<li><a href="#work">Currículos</a></li>
-								<li><a href="#about">Sobre</a></li>
-								<li><a href="#contact">Contato</a></li>
+								<li><a href="#work" title="Visualizar Currículos">Currículos</a></li>
+								<li><a href="#about" title="Sobre o UP DevOps">Sobre</a></li>
+								<li><a href="#contact" title="Entrar em Contato">Contato</a></li>
 								<!-- <li><a href="#elements">Elements</a></li> -->
 							</ul>
 						</nav>
@@ -252,28 +252,28 @@
 									<img src="cv/images/profile_img2.png" alt="Laerte" />
 									<div class="card-content">
 										<!-- <h4><a href="cv/002.html" class="access-link">Laerte</a></h4> -->
-										<h4><a href="cv/002.html">Laerte Porto Junior</a></h4>
+										<h4><a href="cv/002.html" title="Saber mais...">Laerte Porto Junior</a></h4>
 										<p class="card-description">Formado em Análise de Sistemas e Pós Graduado na área de Segurança da Informação pela Universo. Experiência de +10 anos na área de tecnologia, atuando como sysadmin on-premise. Atualmente, em transição de carreira para a área de Cloud como DevOps, buscando oportunidades para atuar com foco em Cloud e implementação de estratégias de migração de aplicações. </p>
 									</div>
 									</li>
 									<li class="card">
 									<img src="cv/images/profile_img1.png" alt="Erivando" />
 									<div class="card-content">
-										<h4><a href="cv/001.html">Erivando Sena Ramos</a></h4>
+										<h4><a href="cv/001.html" title="Saber mais...">Erivando Sena Ramos</a></h4>
 										<p class="card-description">Mestre em Tecnologias Sustentáveis, Graduado em Análise e Desenvolvimento de Sistemas. Especialista em Engenharia DevOps e MBA em Ciência de Dados Big Data Analytics. Bacharelando em Estatística. Experiências com Desenvolvimento de Softwares, Projetos de Eletrônica, Sistemas Embarcados, Dispositivos Móveis e Internet das Coisas. Realiza pesquisas científicas em Estatística Computacional, Ciência de Dados, Big Data, IA e entusiasta DevOps.</p>
 									</div>
 									</li>
 									<li class="card">
 									<img src="cv/images/profile_img3.png" alt="Micael" />
 									<div class="card-content">
-										<h4><a href="cv/003.html">Micael Schutz</a></h4>
+										<h4><a href="cv/003.html" title="Saber mais...">Micael Schutz</a></h4>
 										<p class="card-description">Atualmente, cursando Tecnólogo em Segurança da Informação pela Uniritter. Possui 2 anos de experiência na área administrativa e está em transição de carreira para a área de Cloud e programação. Procura por oportunidades nessa área. Determinação e foco são suas principais características para alcançar os objetivos.</p>
 									</div>
 									</li>
 									<li class="card">
 									<img src="cv/images/profile_img4.png" alt="Renato" />
 									<div class="card-content">
-										<h4><a href="cv/004.html">Renato Soares da Silva</a></h4>
+										<h4><a href="cv/004.html" title="Saber mais...">Renato Soares da Silva</a></h4>
 										<p class="card-description">Bacharelado em Sistemas de Informação.</p>
 									</div>
 									</li>
@@ -782,10 +782,47 @@
 				});
 			</script> -->
 
+    <script>
+        document.getElementById("contact-form").addEventListener("submit", function(event) {
+            event.preventDefault(); // Impede o envio do formulário
+
+            // Coleta os dados do formulário
+            var name = document.getElementById("name").value;
+            var email = document.getElementById("email").value;
+            var message = document.getElementById("message").value;
+
+            // Cria um objeto com os dados
+            var data = {
+                name: name,
+                from: email,
+                message: message
+            };
+
+            // Realiza o envio do formulário via fetch
+            fetch("https://api.getmovielist.com/api/sendmail", {
+                method: "POST",
+                headers: {
+                    "Content-Type": "application/json",
+                    "Authorization": "Bearer eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpZCI6NCwiZW1haWwiOiJnaW8ifQ.DzjyyGonAeJ_hSaguKuk3NYEIkocfC9dTFaF9SSyNqY" // Adicione seu token aqui
+                },
+                body: JSON.stringify(data)
+            })
+            .then(function(response) {
+                if (response.ok) {
+                    alert("Mensagem enviada com sucesso!");
+                    document.getElementById("contact-form").reset(); // Limpa o formulário
+                } else {
+                    throw new Error("Erro ao enviar a mensagem.");
+                }
+            })
+            .catch(function(error) {
+                alert(error.message);
+            });
+        });
+    </script>
 
 
-
-	<script>
+	<!-- <script>
 		document.getElementById('contact-form').addEventListener('submit', function(event) {
 			event.preventDefault(); // Evita o envio do formulário
 
@@ -826,7 +863,7 @@
 					alert('Erro ao enviar o email. Por favor, tente novamente mais tarde.');
 				});
 		});
-	</script>
+	</script> -->
 
 	<!-- <script>
 
