--- a/cv/004.html
+++ b/cv/004.html
@@ -339,14 +339,14 @@
 	<!-- Header -->
 		<header id="header">
 			<div class="logo">
-				<a href="../index.html#about">
+				<a href="../index.html#about" title="Surpreenda-se com nosso projeto">
 					<span class="icon"><i class="fas fa-gem"></i></span>
 				</a>
 			</div>
 			<nav>
 				<ul>
-					<li><a href="../index.html">Home</a></li>
-					<li><a href="../index.html#work">Currículos</a></li>
+					<li><a href="../index.html" title="Voltar para home">Home</a></li>
+					<li><a href="../index.html#work" title="Continuar visualizando currículos">Currículos</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -386,8 +386,10 @@
 					-->
 
 					<ul class="fh5co-social">
-						<li><a href="mailto:renato.silvas@gmail.com"><i class="icon-envelope"></i></a></li>
-						<li><a href="linkedin.com/in/renato-soares-da-silva-7b528266" target="_blank"><i class="icon-linkedin"></i></a></li>
+						<li><a href="mailto:renato.silvas@gmail.com" title="Entrar em contato"><i class="icon-envelope"></i></a></li>
+						<li><a href="linkedin.com/in/renato-soares-da-silva-7b528266" target="_blank" title="Perfil no LinkedIn"><i class="icon-linkedin"></i></a></li>
+						<li><a href="#" target="_blank" title="Contribuições no Github"><i class="icon-github"></i></a></li>
+						<li><a href="CV-Renato.Silva.pdf" target="_blank" alt="Currículo versão PDF"><i class="icon-file-pdf-o"></i></a></li>
 						<!--
 						<li><a href="#"><i class="icon-twitter"></i></a></li>
 						<li><a href="#"><i class="icon-instagram"></i></a></li>
@@ -530,7 +532,7 @@
 				<div class="col-md-6 col-md-offset-3 text-center">
 					<small>
 						&copy; 2023 Currículo Online. Todos os direitos reservados. <span class="fh5co-author">
-						Projetado por <a href="#" target="_blank">Grupo 8</a></span>
+						Projetado por <a href="https://www.updevops.com.br">UP DevOps</a></span>
 					</small>
 				</div>
 			</div>
