--- a/index.html
+++ b/index.html
@@ -6,11 +6,16 @@
 -->
 <html>
 	<head>
-		<title>Currículo Online &mdash; GRUPO 8</title>
+		<title>Currículo Online &mdash; UP DevOps</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+
+
+	<script src="https://smtpjs.com/v3/smtp.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/sendpulse-api-new@1.1.6/index.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/sendpulse-rest-api-js@2.0.1/dist/sendpulse-rest-api.js"></script>
 
 		<style>
 			/* Estilos personalizados para o carrossel */
@@ -160,13 +165,13 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<a href="#about">
+							<a href="#about" title="Surpreenda-se com nosso projeto">
 								<span class="icon fa-gem"></span>
 							</a>
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>GRUPO 8</h1>
+								<h1>UP DevOps</h1>
 								<p>Website para Divulgação de Currículo</p>
 
 								<!-- carrossel -->
@@ -218,9 +223,9 @@
 						<nav>
 							<ul>
 								<!-- <li><a href="#intro">Home</a></li> -->
-								<li><a href="#work">Currículos</a></li>
-								<li><a href="#about">Sobre</a></li>
-								<li><a href="#contact">Contato</a></li>
+								<li><a href="#work" title="Visualizar Currículos">Currículos</a></li>
+								<li><a href="#about" title="Sobre o UP DevOps">Sobre</a></li>
+								<li><a href="#contact" title="Entrar em Contato">Contato</a></li>
 								<!-- <li><a href="#elements">Elements</a></li> -->
 							</ul>
 						</nav>
@@ -247,28 +252,28 @@
 									<img src="cv/images/profile_img2.png" alt="Laerte" />
 									<div class="card-content">
 										<!-- <h4><a href="cv/002.html" class="access-link">Laerte</a></h4> -->
-										<h4><a href="cv/002.html">Laerte</a></h4>
+										<h4><a href="cv/002.html" title="Saber mais...">Laerte Porto Junior</a></h4>
 										<p class="card-description">Formado em Análise de Sistemas e Pós Graduado na área de Segurança da Informação pela Universo. Experiência de +10 anos na área de tecnologia, atuando como sysadmin on-premise. Atualmente, em transição de carreira para a área de Cloud como DevOps, buscando oportunidades para atuar com foco em Cloud e implementação de estratégias de migração de aplicações. </p>
 									</div>
 									</li>
 									<li class="card">
-									<img src="cv/images/profile_img1.png" alt="Erivando Sena" />
+									<img src="cv/images/profile_img1.png" alt="Erivando" />
 									<div class="card-content">
-										<h4><a href="cv/001.html">Erivando Sena Ramos</a></h4>
-										<p class="card-description">Mestre em Tecnologias Sustentáveis, Graduado em Análise e Desenvolvimento de Sistemas. Especialista em Engenharia DevOps e MBA em Ciência de Dados Big Data Analytics. Bacharelando em Estatística. Experiências com Desenvolvimento de Softwares, Projetos de Eletrônica, Sistemas Embarcados, Dispositivos Móveis e Internet das Coisas. Realiza pesquisas científicas em Estatística Computacional, Ciência de Dados, Big Data, IA e é entusiasta de DevOps.</p>
+										<h4><a href="cv/001.html" title="Saber mais...">Erivando Sena Ramos</a></h4>
+										<p class="card-description">Mestre em Tecnologias Sustentáveis, Graduado em Análise e Desenvolvimento de Sistemas. Especialista em Engenharia DevOps e MBA em Ciência de Dados Big Data Analytics. Bacharelando em Estatística. Experiências com Desenvolvimento de Softwares, Projetos de Eletrônica, Sistemas Embarcados, Dispositivos Móveis e Internet das Coisas. Realiza pesquisas científicas em Estatística Computacional, Ciência de Dados, Big Data, IA e entusiasta DevOps.</p>
 									</div>
 									</li>
 									<li class="card">
 									<img src="cv/images/profile_img3.png" alt="Micael" />
 									<div class="card-content">
-										<h4><a href="cv/003.html">Micael Schutz</a></h4>
+										<h4><a href="cv/003.html" title="Saber mais...">Micael Schutz</a></h4>
 										<p class="card-description">Atualmente, cursando Tecnólogo em Segurança da Informação pela Uniritter. Possui 2 anos de experiência na área administrativa e está em transição de carreira para a área de Cloud e programação. Procura por oportunidades nessa área. Determinação e foco são suas principais características para alcançar os objetivos.</p>
 									</div>
 									</li>
 									<li class="card">
-									<img src="cv/images/profile_img4.png" alt="Renato Soares da Silva" />
+									<img src="cv/images/profile_img4.png" alt="Renato" />
 									<div class="card-content">
-										<h4><a href="cv/004.html">Renato Soares da Silva</a></h4>
+										<h4><a href="cv/004.html" title="Saber mais...">Renato Soares da Silva</a></h4>
 										<p class="card-description">Bacharelado em Sistemas de Informação.</p>
 									</div>
 									</li>
@@ -279,27 +284,27 @@
 							</article>
 
 						<!-- About -->
-							<article id="about" style="background-image: linear-gradient(rgba(39, 34, 34, 0.900), rgba(0, 0, 0, 0.9)), url('images/home-banner.jpg'); background-size: 100%; background-repeat: space;">
+							<article id="about" style="background-image: linear-gradient(rgba(39, 34, 34, 0.900), rgba(0, 0, 0, 0.9)), url('images/home-banner.jpg'); background-size: 100%; background-repeat: no-repeat;">
 								<!-- <span class="image main" style="opacity: 0.2;"><img src="images/home-banner.jpg" alt=""/></span> -->
 								<h2 class="major">Sobre</h2>
 								
 								<p style="position: relative;">
 									Projeto de conclusão de curso elaborado por alunos da 
-									<a href="https://escoladanuvem.org/">Escola da Nuvem</a>.<br />
-									O objetivo deste projeto é criar um <strong>Site 
-									de <a href="index.html#work">Currículos</a></strong> e hospedar na <a href="https://aws.amazon.com/pt/">AWS</a>.
+									<a href="https://escoladanuvem.org/" target="_blank">Escola da Nuvem</a>.<br />
+									O objetivo deste projeto é criar um <strong>Site de Currículos</strong> e 
+									hospedar na <a href="https://aws.amazon.com/pt/" target="_blank">AWS</a>.
 									<br /><br />
 									<strong>Os requisitos do projeto são:</strong><br />
-									&check; Rede de entrega de contatos;<br />
+									&check; Rede de entrega de conteúdo;<br />
 									&check; Baixa latência;<br />
 									&check; Armazenamento durável;<br />
 									&check; 11 milhões de requisições por mês.
 									<br /><br />
-									Com esses requisitos obtidos, analisou-se por entregar o 
-									projeto no S3 com distribuição sendo realizada através do 
-									CloudFront. Com o S3 temos um armazenamento altamente disponível 
-									e escalável, devido à replicação automática dos dados em regiões 
-									variadas e também pelo custo baixo.
+									Com esses requisitos obtidos, analisou-se por entregar o projeto 
+									no <strong>S3</strong> com distribuição sendo realizada através do <strong>CloudFront</strong> e 
+									hospedado em <strong>Norte da Virgínia <i>(us-east-1)</i></strong>, o 
+									S3 temos um armazenamento altamente disponível e escalável, devido 
+									à replicação automática dos dados em regiões variadas e também pelo custo baixo.
 									<br /><br />
 									Já o CloudFront ajuda na rapidez da entrega do conteúdo aos 
 									usuários de localidades distintas. Também faz o cache dos 
@@ -309,7 +314,7 @@
 							</article>
 
 						<!-- Contact -->
-							<article id="contact" action="">
+							<article id="contact">
 								<h2 class="major">Contato</h2>
 								<!-- <form method="post" action="#"> -->
 								<form id="contact-form">
@@ -586,7 +591,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; 2023 Currículo Online | Design: <a href="#">Grupo 8</a></p>
+						<p class="copyright">&copy; 2023 Currículo Online | Design: <a href="https://www.updevops.com.br">UP DevOps</a></p>
 					</footer>
 
 			</div>
@@ -664,7 +669,7 @@
 				startCarouselAutoScroll();
 			</script>
 
-			<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+			<!-- <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 			<script>
 				// Verifica se o email está no formato correto
 				function isValidEmail(email) {
@@ -735,7 +740,7 @@
 									"name":name
 									}
 								],
-								"subject":"Novo contato do site Currículo Online - GRUPO 8"
+								"subject":"Novo contato do site Currículo Online - UP DevOps"
 							}
 						],
 						"content":[
@@ -775,7 +780,270 @@
 						alert('Ao tentar enviar a mensagem ocorreu o erro:\n\n' +error+'\n\nTente mais tarde!');
 					});
 				});
-			</script>
+			</script> -->
+
+    <script>
+        document.getElementById("contact-form").addEventListener("submit", function(event) {
+            event.preventDefault(); // Impede o envio do formulário
+
+            // Coleta os dados do formulário
+            var name = document.getElementById("name").value;
+            var email = document.getElementById("email").value;
+            var message = document.getElementById("message").value;
+
+            // Cria um objeto com os dados
+            var data = {
+                name: name,
+                from: email,
+                message: message
+            };
+
+            // Realiza o envio do formulário via fetch
+            fetch("https://api.getmovielist.com/api/sendmail", {
+                method: "POST",
+                headers: {
+                    "Content-Type": "application/json",
+                    "Authorization": "Bearer eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpZCI6NCwiZW1haWwiOiJnaW8ifQ.DzjyyGonAeJ_hSaguKuk3NYEIkocfC9dTFaF9SSyNqY" // Adicione seu token aqui
+                },
+                body: JSON.stringify(data)
+            })
+            .then(function(response) {
+                if (response.ok) {
+                    alert("Mensagem enviada com sucesso!");
+                    document.getElementById("contact-form").reset(); // Limpa o formulário
+                } else {
+                    throw new Error("Erro ao enviar a mensagem.");
+                }
+            })
+            .catch(function(error) {
+                alert(error.message);
+            });
+        });
+    </script>
+
+
+	<!-- <script>
+		document.getElementById('contact-form').addEventListener('submit', function(event) {
+			event.preventDefault(); // Evita o envio do formulário
+
+			var name = document.getElementById('name').value;
+			var email = document.getElementById('email').value;
+			var message = document.getElementById('message').value;
+
+			// Configuração do SendPulse
+			var smtpConfig = {
+				host: 'smtp.sendpulse.com',
+				port: 465,
+				secure: true,
+				username: 'seniorfullstackdevops@gmail.com',
+				password: 'Grupo8Tcc'
+			};
+
+			// Dados do email
+			var emailData = {
+				to: [{
+					name: name,
+					email: email
+				}],
+				from: {
+					name: 'UP DevOps',
+					email: 'seniorfullstackdevops@gmail.com'
+				},
+				subject: 'Teste com SendPulse',
+				text: message
+			};
+
+			// Enviar email usando o SendPulse
+			Email.send(emailData, smtpConfig)
+				.then(function(response) {
+					alert('Email enviado com sucesso!');
+					document.getElementById('contact-form').reset();
+				})
+				.catch(function(error) {
+					alert('Erro ao enviar o email. Por favor, tente novamente mais tarde.');
+				});
+		});
+	</script> -->
+
+	<!-- <script>
+
+		document.getElementById('contact-form').addEventListener('submit', function(event) {
+			event.preventDefault(); // Evita o envio do formulário
+
+			var name = document.getElementById('name').value;
+			var email = document.getElementById('email').value;
+			var message = document.getElementById('message').value;
+
+			// Configuração do SendPulse
+			var clientId = 'b00e739abe4b2149d7d61eb0ce3088cd';
+			var clientSecret = '40f64544c9a5e8407f82579b60a9d370';
+			var accessToken;
+
+			// Obter access token do SendPulse
+			SPApiClient.loginOAuth2(clientId, clientSecret, function(response) {
+				if (response && response.access_token) {
+					accessToken = response.access_token;
+
+					// Enviar email usando o SendPulse
+					var emailData = {
+						html: message,
+						subject: 'Assunto do email',
+						from: { name: 'UP DevOps', email: 'seniorfullstackdevops@gmail.com' },
+						to: [{ name: name, email: email }]
+					};
+
+					SPApiClient.smtpSendMail(emailData, function(response) {
+						alert('Email enviado com sucesso!');
+						document.getElementById('contact-form').reset();
+					}, function(error) {
+						alert('Erro ao enviar o email. Por favor, tente novamente mais tarde.');
+					});
+				} else {
+					alert('Erro ao autenticar com o SendPulse. Por favor, tente novamente mais tarde.');
+				}
+			});
+		});
+	</script> -->
+
+	<!-- <script>
+		document.getElementById('contact-form').addEventListener('submit', function(event) {
+			event.preventDefault(); // Evita o envio do formulário
+
+			var name = document.getElementById('name').value;
+			var email = document.getElementById('email').value;
+			var message = document.getElementById('message').value;
+
+			// Configuração do SendPulse
+			var clientId = 'b00e739abe4b2149d7d61eb0ce3088cd';
+			var clientSecret = '40f64544c9a5e8407f82579b60a9d370';
+
+			// Inicialização da biblioteca SendPulse
+			sendpulse.init({
+				clientId: clientId,
+				clientSecret: clientSecret
+			}, function() {
+				// Autenticação bem-sucedida
+
+				// Enviar email usando o SendPulse
+				sendpulse.smtpSendMail({
+					html: message,
+					subject: 'UP DevOps',
+					from: { name: 'Remetente', email: 'seniorfullstackdevops@gmail.com' },
+					to: [{ name: name, email: email }]
+				}, function(response) {
+					alert('Email enviado com sucesso!');
+					document.getElementById('contact-form').reset();
+				}, function(error) {
+					alert('Erro ao enviar o email. Por favor, tente novamente mais tarde.');
+				});
+			}, function() {
+				// Falha na autenticação
+				alert('Erro ao autenticar com o SendPulse. Por favor, tente novamente mais tarde.');
+			});
+		});
+	</script> -->
+
+	<!-- <script>
+		document.getElementById('contact-form').addEventListener('submit', function(event) {
+		event.preventDefault(); // Evita o envio do formulário
+
+		var name = document.getElementById('name').value;
+		var email = document.getElementById('email').value;
+		var message = document.getElementById('message').value;
+
+		var access_token = '';
+		var clientId = 'b00e739abe4b2149d7d61eb0ce3088cd';
+		var clientSecret = '40f64544c9a5e8407f82579b60a9d370';
+
+		// Fazendo a chamada para obter o access_token
+		var xhr = new XMLHttpRequest();
+		xhr.open('POST', 'https://api.sendpulse.com/oauth/access_token', true);
+		xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
+
+		xhr.onreadystatechange = function() {
+			if (xhr.readyState === 4 && xhr.status === 200) {
+			var response = JSON.parse(xhr.responseText);
+			access_token = response.access_token;
+			console.log('Access Token:', access_token);
+
+			// Configuração do SendPulse
+			var apiKey = access_token;
+			var apiUrl = 'https://api.sendpulse.com';
+
+			// Dados do email
+			var emailData = {
+				html: btoa(message),
+				text: message,
+				subject: 'Assunto do email',
+				from: { name: 'Remetente', email: 'seniorfullstackdevops@gmail.com' },
+				to: [{ name: name, email: email }],
+				cc: [
+				{ name: 'Recipient 2', email: 'jefponte@unilab.edu.br' }
+				],
+				bcc: [
+				{ name: 'Recipient 3', email: 'erivandosena@gmail.com' }
+				]
+			};
+
+			// Requisição AJAX para enviar o email
+			var request = new XMLHttpRequest();
+			request.open('POST', apiUrl + '/smtp/emails');
+			request.setRequestHeader('Content-Type', 'application/json');
+			request.setRequestHeader('Authorization', 'Bearer ' + apiKey);
+			request.onreadystatechange = function() {
+				if (request.readyState === XMLHttpRequest.DONE) {
+				if (request.status === 200) {
+					alert('Email enviado com sucesso!');
+					document.getElementById('contact-form').reset();
+				} else {
+					alert('Erro ao enviar o email. Por favor, tente novamente mais tarde.');
+				}
+				}
+			};
+			request.send(JSON.stringify({ email: emailData }));
+			}
+		};
+
+		var params = 'grant_type=client_credentials&client_id=' + clientId + '&client_secret=' + clientSecret;
+		xhr.send(params);
+		});
+	</script> -->
+
+	<!-- <script>
+
+
+		document.getElementById('contact-form').addEventListener('submit', function(event) {
+			event.preventDefault(); // Evita o envio do formulário
+
+
+
+
+
+		var clientId = 'b00e739abe4b2149d7d61eb0ce3088cd';
+		var clientSecret = '40f64544c9a5e8407f82579b60a9d370';
+
+		// Fazendo a chamada para obter o access_token
+		var xhr = new XMLHttpRequest();
+		xhr.open('POST', 'https://api.sendpulse.com/oauth/access_token', true);
+		xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
+
+		xhr.onreadystatechange = function() {
+		if (xhr.readyState === 4 && xhr.status === 200) {
+			var response = JSON.parse(xhr.responseText);
+			var access_token = response.access_token;
+			console.log('Access Token:', access_token);
+			alert(access_token);
+		}
+		};
+
+		var params = 'grant_type=client_credentials&client_id=' + clientId + '&client_secret=' + clientSecret;
+		xhr.send(params);
+
+		});
+
+
+	</script> -->
+
 
 	</body>
 </html>
