Versão para bucket s3

--- a/cv/002.html
+++ b/cv/002.html
@@ -388,6 +388,7 @@
 						<li><a href="mailto:laertep@gmail.com" title="Entrar em contato"><i class="icon-envelope"></i></a></li>
 						<li><a href="https://www.linkedin.com/in/laerteportojr/" target="_blank" title="Perfil no LinkedIn"><i class="icon-linkedin"></i></a></li>
 						<li><a href="https://github.com/" target="_blank" title="Contribuições no Github"><i class="icon-github"></i></a></li>
+						<li><a href="#" target="_blank" title="Currículo versão PDF"><i class="icon-file-pdf-o"></i></a></li>
 						<!--
 						<li><a href="#"><i class="icon-twitter"></i></a></li>
 						<li><a href="#"><i class="icon-instagram"></i></a></li>
