Update meta tags

--- a/index.html
+++ b/index.html
@@ -6,16 +6,20 @@
 -->
 <html>
 	<head>
-		<title>Currículo Online &mdash; UP DevOps</title>
 		<meta charset="utf-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="description" content="Grupo 8: Erivando Sena; Micael; Laerte; Renato. Mentor TCC: Rodolfo @Homaru">
+		<meta name="keywords" content="UP DevOps, Curriculos, Escola da Nuvem, AWS, Bucket S3, CloudFront, html5, css3, mobile first, website responsive" />
+		<meta name="author" content="Erivando Sena" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<title>Currículo Online &mdash; UP DevOps</title>
+		<meta name="robots" content="index,follow">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 
-
-	<script src="https://smtpjs.com/v3/smtp.js"></script>
+	<!-- <script src="https://smtpjs.com/v3/smtp.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/sendpulse-api-new@1.1.6/index.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/sendpulse-rest-api-js@2.0.1/dist/sendpulse-rest-api.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/sendpulse-rest-api-js@2.0.1/dist/sendpulse-rest-api.js"></script> -->
 
 		<style>
 			/* Estilos personalizados para o carrossel */
