Updates conteúdo páginas web

--- a/cv/001.html
+++ b/cv/001.html
@@ -6,13 +6,15 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 	<head>
 	<meta charset="utf-8">
+	<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="description" content="Grupo 8: Erivando Sena; Micael; Laerte; Renato. Mentor TCC: Rodolfo @Homaru">
+	<meta name="keywords" content="UP DevOps, Curriculos, Escola da Nuvem, AWS, Bucket S3, CloudFront, html5, css3, mobile first, website responsive" />
+	<meta name="author" content="Erivando Sena" />
 	<title>Currículo Online &mdash; Erivando</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
-	<meta name="keywords" content="free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
-	<meta name="author" content="FreeHTML5.co" />
-
+	<meta name="robots" content="index,follow">
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	
   <!-- 
 	//////////////////////////////////////////////////////
 
