--- a/erro.html
+++ b/erro.html
@@ -6,9 +6,12 @@
 -->
 <html>
 	<head>
-		<title>Currículo Online &mdash; Erro</title>
 		<meta charset="utf-8" />
+		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta http-equiv="refresh" content="15;url=index.html" />
+		<title>Currículo Online &mdash; Erro</title>
+		<meta name="robots" content="noindex,nofollow">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
