--- a/cv/003.html
+++ b/cv/003.html
@@ -6,12 +6,14 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 	<head>
 	<meta charset="utf-8">
+	<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="description" content="Grupo 8: Erivando Sena; Micael; Laerte; Renato. Mentor TCC: Rodolfo @Homaru">
+	<meta name="keywords" content="UP DevOps, Curriculos, Escola da Nuvem, AWS, Bucket S3, CloudFront, html5, css3, mobile first, website responsive" />
+	<meta name="author" content="Erivando Sena" />
 	<title>Currículo Online &mdash; Micael</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
-	<meta name="keywords" content="free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
-	<meta name="author" content="FreeHTML5.co" />
+	<meta name="robots" content="index,follow">
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 
   <!-- 
 	//////////////////////////////////////////////////////
@@ -387,7 +389,8 @@
 					<ul class="fh5co-social">
 						<li><a href="mailto:micaelschutz04@gmail.com" title="Entrar em contato"><i class="icon-envelope"></i></a></li>
 						<li><a href="https://www.linkedin.com/in/micaelschutz/" target="_blank" title="Perfil no LinkedIn"><i class="icon-linkedin"></i></a></li>
-						<li><a href="https://github.com/" target="_blank" title="Contribuições no Github"><i class="icon-github"></i></a></li>
+						<li><a href="https://github.com/MicaelSchutz" target="_blank" title="Contribuições no Github"><i class="icon-github"></i></a></li>
+						<li><a href="CV.Micael.Schutz.pdf" target="_blank" title="Currículo versão PDF"><i class="icon-file-pdf-o"></i></a></li>
 						<!--
 						<li><a href="#"><i class="icon-twitter"></i></a></li>
 						<li><a href="#"><i class="icon-instagram"></i></a></li>
